# deploything

agent/: Cargo.toml
agent/agent-test-server/: .gitignore  Makefile  README.md  pyproject.toml
agent/agent-test-server/src/agent_test_server/: __init__.py
agent/agent-test-server/src/agent_test_server/cli/: interactive.py
agent/agent-test-server/src/agent_test_server/cli/tui/: __init__.py  app.py
agent/agent-test-server/src/agent_test_server/commands/: __init__.py  builders.py
agent/agent-test-server/src/agent_test_server/proto/deploything/v1/: __init__.py
agent/agent-test-server/src/agent_test_server/server/: __init__.py  connection.py  ws_server.py
agent/agent-test-server/src/agent_test_server/snapshot/: __init__.py  formatter.py
agent/agent-test-server/tests/: conftest.py
agent/agent-test-server/tests/integration/: test_agent_commands.py
agent/agent_bin/: Cargo.toml
agent/agent_bin/src/: lib.rs  main.rs
agent/agent_bin/src/cli/: mod.rs
agent/agent_bin/src/cmd/: handler.rs  mod.rs
agent/agent_bin/src/docker_api/: container.rs  errors.rs  events.rs  handler.rs  image.rs  mod.rs
agent/agent_bin/src/ws/: errors.rs  handler.rs  mod.rs  receiver.rs  sender.rs
agent/agent_bin/tests/: spawn_and_stop.rs
agent/agent_proxy/: Cargo.toml
agent/agent_proxy/src/: lib.rs  routing.rs
agent/agent_proxy/src/route/: matcher.rs  mod.rs  routing.rs  table.rs
agent/agent_proxy/src/server/: proxy.rs
agent/agent_wire/: Cargo.toml  build.rs
agent/agent_wire/src/: impls.rs  lib.rs
agent/src/: main.rs
agent/src/docker_api/: container.rs  errors.rs  image.rs  mod.rs
agent/tests/: spawn_and_stop.rs
protos/deploything/v1/: agent_snapshot.proto  remote_command.proto  run_application.proto
