[project]
name = "agent-test-server"
version = "0.1.0"
description = "WebSocket server for testing the deploything agent"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "protobuf>=4.25.0",
    "click>=8.1.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-tools>=1.60.0",
]

[project.scripts]
agent-test-server = "agent_test_server.cli.interactive:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
