[package]
name = "agent_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_wire = { path = "../agent_wire" }
bollard = "0.19.4"
futures-util = { version = "0.3.31", features = ["sink"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
ureq = "3.1.4"
