[package]
name = "agent_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_wire  = { workspace = true }
agent_proxy = { workspace = true }
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = { version = "0.3.31", features = ["sink"] }
prost = "0.14.1"
prost-types = { version = "0.14.1", features = ["chrono"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
ureq = "3.1.4"
